Update generated HTML version of article.

--- a/index.html
+++ b/index.html
@@ -14215,7 +14215,7 @@ div#notebook {
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>work: 1.0003807544708252 seconds
+<pre>work: 1.000380039215088 seconds
 </pre>
 </div>
 </div>
@@ -14268,7 +14268,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>To avoid this, you can use the built-in high-order function <a href="https://docs.python.org/3/library/functools.html#functools.wraps"><code>wraps</code></a> function (which can itself be used as a decorator) found in <a href="https://docs.python.org/3/library/functools.html"><code>functools</code></a>.</p>
+<p>To avoid this, you can use the built-in high-order function <a href="https://docs.python.org/3/library/functools.html#functools.wraps"><code>wraps</code></a> function (which can itself be used as a decorator) found in the built-in <a href="https://docs.python.org/3/library/functools.html">functools</a> library.</p>
 
 </div>
 </div>
